--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-mail'
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
@@ -30,6 +31,16 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+
+    // THYMELEAF_EXTRAS
+    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity5'
+
+    // MODEL_MAPPER
+    implementation 'org.modelmapper:modelmapper:2.4.4'
+
+    // SPRING_BOOT_STARTER_VALIDATION
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
+
 }
 
 test {
