feat: 상품 도메인 추가 및 CRUD 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,14 @@
 spring:
   profiles:
     active: local
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 
+server:
+  tomcat:
+    max-http-form-post-size: 5MB
 
 app:
   host: http://localhost:8080
