feat: package.json 명령문 수정 및 gitignore 수정

--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "echo Building frontend",
+    "check": "echo Checking frontend && npm run lint && npm run test",
+    "clean": "echo Cleaning frontend",
+    "lint": "echo Linting frontend",
+    "test": "echo Testing frontend"
   },
   "author": "",
   "license": "ISC",
