--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 
+    //querydsl 추가
+    id "com.ewerk.gradle.plugins.querydsl" version "1.0.10"
     id 'org.siouan.frontend-jdk11' version '5.2.0'
     id "org.siouan.frontend" version "3.0.2"
 }
@@ -66,9 +68,33 @@ dependencies {
     // SPRING_BOOT_STARTER_VALIDATION
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 
+    // QUERY_DSL
+    implementation 'com.querydsl:querydsl-jpa'
+
 
 }
 
 test {
     useJUnitPlatform()
 }
+
+//querydsl 추가 시작
+def querydslDir = "$buildDir/generated/querydsl"
+querydsl {
+    jpa = true
+    querydslSourcesDir = querydslDir
+}
+sourceSets {
+    main.java.srcDir querydslDir
+}
+configurations {
+    querydsl.extendsFrom compileClasspath
+}
+compileQuerydsl {
+    options.annotationProcessorPath = configurations.querydsl
+}
+
+test {
+    useJUnitPlatform()
+}
+//querydsl 추가 끝
