--- a/src/main/resources/static/package.json
+++ b/src/main/resources/static/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "croppie": "^2.6.5",
+    "devtools-detect": "^3.0.1",
     "moment": "^2.24.0",
     "tinymce": "^5.8.1"
   }
